[workspace]
resolver = "3"
members = [
    "pumpkin-api-macros",
    "pumpkin-config",
    "pumpkin-util",
    "pumpkin-inventory",
    "pumpkin-macros/",
    "pumpkin-protocol/",
    "pumpkin-world",
    "pumpkin/",
    "pumpkin-data",
    "pumpkin-plugin-api",
    "pumpkin-codecs"
]
exclude = ["pumpkin-codegen"]

[workspace.lints.clippy]
# Groups
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

if_then_some_else_none = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
separated_literal_suffix = "deny"
semicolon_outside_block = "deny"
redundant_test_prefix = "deny"
non_zero_suggestions = "deny"
dbg_macro = "deny"
rc_buffer = "deny"
verbose_file_reads = "deny"
string_lit_chars_any = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
branches_sharing_code = "deny"
equatable_if_let = "deny"
option_if_let_else = "deny"
needless_pass_by_ref_mut = "deny"
needless_collect = "deny"
redundant_clone = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
print_stdout = "deny"
print_stderr = "deny"

todo = "deny"
unreachable = "deny"
unimplemented = "deny"
# indexing_slicing = "deny" 

# Expected/Allowed
cargo_common_metadata = "allow"
cast_precision_loss = "allow"
multiple_crate_versions = "allow"
single_call_fn = "allow"
unreadable_literal = "allow"
many_single_char_names = "allow"
suboptimal_flops = "allow"
cast_lossless = "allow"
while_float = "allow"
or_fun_call = "allow"
significant_drop_tightening = "allow"
suspicious_operation_groupings = "allow"
literal_string_with_formatting_args = "allow"
future_not_send = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[workspace.package]
version = "0.1.0-dev+26.1"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true
strip = false


[workspace.dependencies]
tokio = { version = "1.52", default-features = false }
syn = { version = "2.0", default-features = false, features = ["printing"] }

thiserror = "2.0"

bytes = "1.11"

# Concurrency/Parallelism and Synchronization
futures = { version = "0.3", default-features = false, features = ["executor"] }
rayon = "1.12"
crossbeam = "0.8"

uuid = { version = "1.23", features = ["serde", "v3", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = "1.0"

tempfile = { version = "3.27.0", default-features = false }
proc-macro-error2 = "2"
aes = "0.9"
async-compression = "0.4.42"
base64 = "0.22.1"
bitflags = "2.11.1"
cesu8 = "1.1"
cfb8 = "0.9"
colored = "3.1"
console-subscriber = { version = "0.5.0", default-features = false }
crc-fast = "1.10.0"
criterion = { version = "0.8", default-features = false }
crossbeam-utils = "0.8.21"
crossfire = { version = "3.1.15", features = ["compat"] }
crypto-bigint = "0.7.3"
dashmap = "6.2"
ecdsa = "0.16.9"
either = "1.16.0"
enum_dispatch = "0.3.13"
flate2 = "1.1.9"
heck = "0.5"
hmac = "=0.13.0"
indexmap = "2.14"
itertools = "0.14.0"
libloading = "0.9"
lru = "0.18.0"
lz4-java-wrc = "0.2.0"
md5 = "0.8"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
p384 = "0.13.1"
phf = "0.13.1"
proc-macro2 = "1.0"
pumpkin-codecs = { path = "pumpkin-codecs" }
pumpkin-config = { path = "pumpkin-config" }
pumpkin-data = { path = "pumpkin-data" }
pumpkin-inventory = { path = "pumpkin-inventory" }
pumpkin-macros = { path = "pumpkin-macros" }
pumpkin-nbt = { path = "pumpkin-nbt" }
pumpkin-protocol = { path = "pumpkin-protocol" }
pumpkin-util = { path = "pumpkin-util" }
pumpkin-world = { path = "pumpkin-world" }
quote = "1.0"
rand = "0.10.1"
rsa = "=0.10.0-rc.18"
cipher = "0.5.2"
rustc-hash = "2.1.2"
rustyline = "18.0.0"
ruzstd = "0.8.3"
serde_json5 = "0.2.1"
sha1 = "=0.11.0"
sha2 = "=0.11.0"
signature = "3.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "time",
] }
slotmap = "1.1"
temp-dir = "0.2.0"
thread_local = "1.1.9"
time = "0.3"
arc-swap = "1.9"
tokio-util = "0.7.18"
toml = "1.1"
ureq = "3.3.0"
notify = "8.2.0"

wasmtime = "45.0"
wasmtime-wasi = { version = "45.0", default-features = false, features = ["p2"] }
wasmtime-wasi-http = "45.0"
# needed for interacting with wasmtime-wasi-http - keep in sync
hyper = { version = "^1.9", features = ["full"] }
wit-bindgen = "0.57"

postcard = { version = "1.1", features = ["alloc"] }
tracing-serde-structured = "0.4"
