[package]
name = "pumpkin-codegen"
version = "0.1.0-dev+26.1"
edition = "2024"
rust-version = "1.89"

[dependencies]
indexmap = { version = "2.14", features = ["serde"] }
heck = "0.5"

# For random pre calc
md5 = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json5 = "0.2"

wit-encoder = "0.253.0"
semver = "1.0"
rayon = "1.12.0"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

pumpkin-util = { path = "../pumpkin-util", features = ["codegen"] }
pumpkin-nbt = { path = "../pumpkin-nbt" }

# [lints]
# all = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
