[package]
name = "pumpkin-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-util.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

toml.workspace = true


[lints]
workspace = true
