[package]
name = "pumpkin-data"
version.workspace = true
edition.workspace = true
build = "build/build.rs"

[dependencies]
phf = { workspace = true, features = ["macros"] }
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true

serde.workspace = true
crc-fast.workspace = true

[build-dependencies]
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true

serde.workspace = true
serde_json.workspace = true

serde_json5.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

rayon.workspace = true
