[package]
name = "pumpkin-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = [
    "item",
    "packet",
    "jukebox_song",
    "translation",
    "registry",
    "screen",
    "particle",
    "sound",
    "recipes",
    "data_component",
    "attributes",
    "tracked_data",
    "meta_data_type",
    "chunk",
    "game_event",
    "game_rules",
    "entity",
    "dimension",
    "enchantment",
    "world",
    "scoreboard",
    "damage",
    "fluid",
    "block",
    "tag",
    "noise_router",
    "composter",
    "flower_pot",
    "fuels",
    "effect",
    "structures",
    "potion",
    "recipe_remainder",
    "chunk_gen_settings",
    "advancement",
    "carver",
    "villager",
    "placed_feature",
    "configured_feature",
    "slot_ranges"
]

advancement = []
item = []
packet = []
jukebox_song = []
translation = []
registry = []
screen = []
particle = []
sound = []
recipes = []
data_component = []
attributes = []
tracked_data = []
meta_data_type = []
chunk = ["noise_parameter", "biome", "chunk_status"]
game_event = []
game_rules = []
entity = ["entity_pose", "entity_status", "entity_type", "spawn_egg"]
dimension = []
enchantment = []
world = ["world_event", "message_type"]
scoreboard = []
damage = []
fluid = []
tag = []
noise_router = []
composter = []
flower_pot = []
fuels = []
effect = []
structures = []
potion = ["potion_brewing"]
recipe_remainder = []
chunk_gen_settings = []
carver = []
villager = ["item", "sound"]
slot_ranges = []

noise_parameter = []
biome = []
chunk_status = []
entity_pose = []
entity_status = []
entity_type = ["sound"]
spawn_egg = []
world_event = []
message_type = []
placed_feature = []
configured_feature = []
block = []
item_id_remap = []
entity_id_remap = []
sound_id_remap = []
potion_brewing = []

[dependencies]
phf = { workspace = true, features = ["macros"] }
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true
serde.workspace = true
crc-fast.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "has_random_ticks"
harness = false

[package.metadata.cargo-machete]
ignored = ["phf"]

# [lints]
# workspace = true
