[package]
name = "pumpkin-inventory"
version.workspace = true
edition.workspace = true
rust-version = "1.87"

[dependencies]
pumpkin-protocol.workspace = true
pumpkin-data.workspace = true

pumpkin-world.workspace = true
pumpkin-util.workspace = true

log.workspace = true
tokio.workspace = true
thiserror.workspace = true
crossbeam-utils.workspace = true
