[package]
name = "pumpkin-inventory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-protocol.workspace = true
pumpkin-data = { workspace = true, features = [
    "item",
    "screen",
    "data_component",
    "recipes",
    "tag",
    "fuels",
    "enchantment",
    "potion",
] }

pumpkin-world.workspace = true
pumpkin-util.workspace = true

rand.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

[lints]
workspace = true
