[package]
name = "pumpkin-nbt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-codecs.workspace = true
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true

cesu8.workspace = true
flate2.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "nbt"
harness = false

[lints]
workspace = true
