[package]
name = "pumpkin-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["query"]
serverbound = []
clientbound = []
query = []

[dependencies]
pumpkin-nbt.workspace = true
pumpkin-data = { workspace = true, features = ["packet", "item_id_remap", "entity_id_remap", "sound_id_remap", "recipes"] }
pumpkin-macros.workspace = true
pumpkin-world.workspace = true
pumpkin-util.workspace = true

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
bytes.workspace = true

# encryption
aes.workspace = true
cfb8.workspace = true
hybrid-array = "0.4"

# compression
async-compression = { workspace = true, features = ["tokio", "zlib", "deflate"] }
flate2.workspace = true

bitflags.workspace = true

[dev-dependencies]
# Validate correctness

[lints]
workspace = true
