[package]
name = "pumpkin-util"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

num-derive = "0.4"
num-traits = "0.2"

colored = "3.0"
md5 = "0.8"
quote = "1.0"
syn.workspace = true
proc-macro2 = "1.0"
enum_dispatch = "0.3.13"

uuid.workspace = true
tokio = { workspace = true, features = [
    "sync",
] }
base64 = "0.22.1"
p384 = { version = "0.13.1", features = ["ecdsa"] }
thiserror.workspace = true
ecdsa = "0.16.9"
