[package]
name = "pumpkin-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pumpkin-nbt.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

num-derive.workspace = true
num-traits.workspace = true

colored.workspace = true
md5.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
enum_dispatch.workspace = true

uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
base64.workspace = true
p384 = { workspace = true, features = ["ecdsa"] }
thiserror.workspace = true
ecdsa.workspace = true

[lints]
workspace = true
