[package]
name = "pumpkin-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-nbt.workspace = true
pumpkin-codecs.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

num-derive.workspace = true
num-traits.workspace = true

colored.workspace = true
md5.workspace = true
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
enum_dispatch.workspace = true

uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
base64.workspace = true
p384 = { workspace = true, features = ["ecdsa", "ecdh"] }
thiserror.workspace = true
ecdsa.workspace = true
rsa.workspace = true
sha2.workspace = true
crypto-bigint.workspace = true
ureq.workspace = true

[features]
default = []
codegen = ["dep:syn", "dep:quote", "dep:proc-macro2"]

[lints]
workspace = true
