[package]
name = "pumpkin-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pumpkin-nbt.workspace = true
pumpkin-util.workspace = true
pumpkin-config.workspace = true
pumpkin-data = { workspace = true, features = ["default"] }

futures.workspace = true

bytes.workspace = true

tokio = { workspace = true, features = [
    "macros",
    # Maybe remove this in the future
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
    "fs",
    "io-util",
    "time",
] }
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
crossbeam.workspace = true

sha2.workspace = true
bitflags.workspace = true

dashmap.workspace = true

# Compression
flate2.workspace = true
lz4-java-wrc.workspace = true
ruzstd.workspace = true

itertools.workspace = true
enum_dispatch.workspace = true

# thread_local.workspace = true
# lru.workspace = true

tokio-util = { workspace = true, features = ["rt"] }
rand.workspace = true
num_cpus.workspace = true
rustc-hash.workspace = true
slotmap.workspace = true
crossfire.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
temp-dir.workspace = true
# Deserialize NaN and Inf
serde_json5.workspace = true

[[bench]]
name = "chunk"
harness = false

#[[bench]]
#name = "chunk_io"
#harness = false

[[bench]]
name = "chunk_gen"
harness = false

[[bench]]
name = "noise_router"
harness = false

[features]
tokio_taskdump = []

# [lints]
# workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_json"]
